``` feat: Implement language settings and enhance analytics
This commit introduces language settings functionality and enhances the analytics screen by improving time period selection and duration formatting.

- **Language Settings:**
    - Added `LanguageSelector` Composable: Allows users to select their preferred language.
    - Implemented `SettingsScreen`: Provides a dedicated screen for managing app settings, including language selection.
    - Introduced `LanguagePreferenceDataStore`: Utilizes DataStore to persist the selected language.
    - Created `SaveLanguageUseCase` and `GetLanguageUseCase`: Manages saving and retrieving the selected language.
    - Defined `AppLanguages` enum: Lists supported languages with their respective locales.
    - Added `LocaleHelper`: Facilitates language switching and retrieval of the current language code.
    - Added Koin modules: (`settingsDataModule`, `settingsDomainModule`, `settingsPresentationModule`) for dependency injection.
    - Implemented `SettingsViewModel`: Handles the logic for language selection and saving.
    - Introduced `Destination` sealed class for navigation management
    - Created `AppNavigation` file for app navigation

- **Analytics Enhancements:**
    - Improved time period labels: Updated time period labels to be more user-friendly (e.g., "Yesterday," "2 Days Ago").
    - Enhanced duration formatting: Implemented more detailed formatting for durations (e.g., "1 day 2 hr," "3 hr 30 min").
    - Added Application context to analytics: now we can use `stringResource`
    - Changed currency format to Arm currency

- **UI Improvements:**
    - Added new strings for language settings and analytics
    - Localized the app in Arm, Rus and English languages
    - added `back` action
    - add settings icon

- **Dependencies:**
    - Added `datastore-preferences` dependency for persistent language preferences.
    - Updated KSP to `2.0.21-1.0.27`
    - Updated Navigation Compose to `2.8.9`
    - Updated Sys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,29 @@
 <resources>
     <string name="app_name">ParkingApp</string>
+    <string name="choose_a_time_period">Choose a time period</string>
+    <string name="settings">Settings</string>
+    <string name="total_revenue">Total Revenue</string>
+    <string name="currency">$%1$s</string>
+    <string name="total_cars_parked">Total Cars Parked</string>
+    <string name="cars_quantity">%1$s cars</string>
+    <string name="average_parking_time">Average Parking Time</string>
+    <string name="now">Now</string>
+    <string name="parking_lots_occupied">Parking Lots Occupied</string>
+    <string name="total_spot">" / %1$s"</string>
+    <string name="parking_occupancy">Parking Occupancy</string>
+    <string name="back">Back</string>
+    <string name="language">Language</string>
+
+    <!-- values/strings.xml -->
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="two_days_ago">2 Days Ago</string>
+    <string name="three_days_ago">3 Days Ago</string>
+    <string name="last_week">Last Week</string>
+    <string name="last_month">Last Month</string>
+    <string name="days_format">%1$d days %2$s</string>
+    <string name="hours_format">%1$d hr %2$s</string>
+    <string name="minutes_format">%1$d min</string>
+    <string name="hour_singular">%1$d hr</string>
+    <string name="minute_singular">%1$d min</string>
 </resources>
