``` feat: Implement parking occupancy diagrams and enhance navigation
This commit introduces a new feature to display parking occupancy diagrams and enhances the navigation flow within the application.

-   **Parking Occupancy Diagrams:**
    -   Created `ParkingOccupancyData` data class to represent parking occupancy data for each month.
    -   Added `DiagramsScreen` Composable to display the monthly parking occupancy data in a chart.
    -   Implemented `ParkingOccupancyChart` to render the bar chart using Canvas.
    -   Added mock parking data for the last 12 months in `mockParkingData`.
    -   Created new resource files for preloaded fonts (`preloaded_fonts.xml`) and font certificates (`font_certs.xml`).
    - Added new font `inter_regular`
-   -  Added `gilroy_semi_bold` font

-   **Navigation Enhancements:**
    -   Added `Diagrams` as a new destination to the `Destination` sealed class.
    -   Updated `AppNavigation` to include a route to `DiagramsScreen`.
    -   Added navigation from `AnalyticsScreen` to `DiagramsScreen` via the "By Month" button.
    -   Implemented `back` navigation from `DiagramsScreen` to `AnalyticsScreen`.
    - Updated `SettingsScreen` to have `back` icon and new title style
    - Changed appbar color

-   **UI Improvements:**
    -   Added new strings for the diagrams feature (e.g., "By Month," "Parking Occupancy Last 12 Months") in English, Russian, and Armenian.
    -   Added `Gray600` to colors
    - Updated `AnalyticsScreen` with `gilroy_semi_bold`
    - Updated `SettingsScreen` with `gilroy_semi_bold`

- **Other:**
    - Added `generateLocaleConfig = true` to `androidResources`
    - Updated `AndroidManifest.xml` to include `preloaded_fonts`
    - Created resource directories for `inter_regular` font
```

--- a/app/src/main/res/values-hy/strings.xml
+++ b/app/src/main/res/values-hy/strings.xml
@@ -13,6 +13,9 @@
     <string name="parking_occupancy">Կայանատեղի զբաղվածություն</string>
     <string name="back">Ետ</string>
     <string name="language">Լեզու</string>
+    <string name="by_month">Ըստ ամիսների</string>
+    <string name="parking_occupancy_last_12_months">Ավտոկայանատեղի զբաղ. վերջին 12 ամիս.</string>
+
 
     <string name="today">Այսօր</string>
     <string name="yesterday">Երեկ</string>
