``` feat: Implement interactive animated bars and enhance analytics
This commit introduces interactive animated bars to the parking occupancy chart and enhances the analytics card with number animation.

- **Interactive Animated Bars:**
    - Created `AnimatedBars` composable: Implements animated bar transitions for the parking occupancy chart.
    - Now bars are interactive and shows tooltip with revenue on tap
    - Implements selection animations: bars scales when tap on it
    - Added Tooltip: implemented revenue showing tooltip on bar click
    - Utilizes `animateFloatAsState`: Animates the height of each bar based on its target occupancy percentage.
    - `spring` animation: Applies a spring effect to the bar animations for a more dynamic look.
    - `LaunchedEffect`: Triggers the animation on initial composition.
    - `Canvas`: Renders the animated bars with rounded corners.

- **Analytics Enhancements:**
    - Updated `AnalyticsCard`: Added animated transition to number
    - Implemented number animation: Implements animated number transition in `AnalyticsCard`
    - Now `AnalyticsCard` can be animated

- **Parking Occupancy Data:**
    - Updated `ParkingOccupancyData`: Added `formattedRevenue` to show in the tooltip
    - Updated `mockParkingData` with revenue: Added revenue to `mockParkingData`

- **Language:**
    - Added restart app logic: Now when you change language app restart with new language

- **Other:**
    -  Refactor: updated `currency` symbol from ֏ to $
    - Updated `MainActivity`: Now `MainActivity` is restarting on language change
```

--- a/app/src/main/res/values-hy/strings.xml
+++ b/app/src/main/res/values-hy/strings.xml
@@ -3,7 +3,7 @@
     <string name="choose_a_time_period">Ընտրեք ժամանակահատվածը</string>
     <string name="settings">Կարգավորումներ</string>
     <string name="total_revenue">Ընդհանուր եկամուտ</string>
-    <string name="currency">֏%1$s</string>
+    <string name="currency">$%1$s</string>
     <string name="total_cars_parked">Ընդհանուր կայանված մեքենաներ</string>
     <string name="cars_quantity">%1$s մեքենաներ</string>
     <string name="average_parking_time">Միջին կայանման ժամանակը</string>
